--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-.card-parent {
-    background-color: #a49797;
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: gray;
+    border-radius: 10px;
 }
